<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_ODI_Card">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:ems="10"

            android:text="@string/create_your_card"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="588dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/yourname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:hint="Name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/fathername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/father_Name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/yourcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/city"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/phonenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/phonenumber_2"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/gmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="xyz@gmail.com"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/Adhar6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/adharcarddetails"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/Adhar9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/xx"
                            android:inputType="textPersonName"
                            android:padding="5dp"
                            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/pancard"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:padding="7dp"
                            android:text="@string/pan_card_details"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/Pan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/xxx"
                            android:inputType="textPersonName"
                            android:padding="6dp"
                            tools:ignore="InvalidId,TextContrastCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/voter"
                            android:layout_width="143dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:padding="7dp"
                            android:text="@string/voter_card_details"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/voterr"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/xxxx"
                            android:inputType="textPersonName"
                            android:padding="6dp"
                            android:textColorHint="#757575"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ration"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:padding="7dp"
                            android:text="@string/ration_card_details"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/rationn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/xxxxxx"
                            android:inputType="textPersonName"
                            android:padding="6dp"
                            android:textColorHint="#757575" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="58dp">

                        <TextView
                            android:id="@+id/drvingjk"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/driving_lisence_details"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/siyo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/xxxxxxxxxx"
                            android:inputType="textPersonName"
                            android:padding="5dp"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Button" />

                    </TableRow>
                </LinearLayout>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/purple"
                    android:text="submit"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>