<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewReg"
            android:layout_width="421dp"
            android:layout_height="292dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/imageLogo"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/androidlogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="336dp"
            android:background="@drawable/one_digital_id_15"
            android:orientation="vertical">

            <Button
                android:id="@+id/usersection"
                android:layout_width="249dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple"
                android:onClick="openActivity"
                android:padding="8dp"
                android:text="@string/user_section"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/officersection"
                android:layout_width="249dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple"
                android:onClick="openActivityOLP"
                android:padding="8dp"
                android:text="@string/officer_section"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/adminsection"
                android:layout_width="249dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple"
                android:padding="8dp"
                android:text="@string/admin_section"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>